[project]
name = "luma"
version = "0.1.0"
description = "CLI runtime for GraiaProject based bots."
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
dependencies = [
    "rich~=13.0",
    "jsonschema~=4.17",
    "dacite~=1.7",
    "typing-extensions>=4.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black~=22.12",
    "isort~=5.11",
    "pre-commit~=2.21",
]

[project.scripts]
luma = "luma.core:main"

[project.entry-points."luma.plugin"]
init = "luma.commands.init:plugin"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
