[project]
name = "luma"
version = "0.1.0"
description = "CLI runtime for GraiaProject based bots."
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
dependencies = [
    "rich~=13.0",
    "jsonschema~=4.17",
    "dacite~=1.7",
    "typing-extensions>=4.2.0",
    "tomlkit~=0.11",
    "importlib-metadata>=3.6",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black~=22.12",
    "isort~=5.11",
    "pre-commit~=2.21",
    "kayaku~=0.5",
    "graia-ariadne[graia]~=0.10",
    "graiax-playwright~=0.2",
    "graiax-shortcut~=0.2",
]

[project.scripts]
luma = "luma.core:main"

[project.entry-points."luma.plugin"]
init = "luma.commands.init:plugin"
run = "luma.commands.run:plugin"
self = "luma.commands.self:plugin"

[project.entry-points."luma.component"]
graia-ariadne = "luma.bundled.components.graia_ariadne:initialize"
launart = "luma.bundled.components.launart:initialize"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pyright]
pythonVersion = "3.8"
